// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test select component slots > test select append icon slot 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-field-decorator__clear-icon" style="transition-duration: 0ms;" var-field-decorator-cover=""></i>append-icon</div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select component slots > test select clear icon slot 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">clear-icon</div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select component slots > test select prepend icon slot 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon">prepend-icon</div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon"><i class="var-icon var-icon--set var-icon-close-circle var-field-decorator__clear-icon" style="transition-duration: 0ms;" var-field-decorator-cover=""></i></div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--focus" style="cursor: pointer; overflow: visible; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow var-select--arrow-rotate" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot var-field-decorator--line-focus"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select focus & blur methods 2`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select hint to be false 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon var-field-decorator--icon-non-hint"></div>
        <div class="var-field-decorator__middle var-field-decorator--middle-non-hint">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label"><span></span></div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon var-field-decorator--icon-non-hint">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select size 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard var-field-decorator--small">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select validation 1`] = `
"<div class="var-select">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller var-field-decorator--error" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select var-select--error" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line var-field-decorator--line-error">
        <div class="var-field-decorator__dot var-field-decorator--line-error"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <div class="var-form-details">
      <div class="var-form-details__error-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <div>您必须选择一个</div>
        </transition-stub>
      </div>
      <div class="var-form-details__extra-message">
        <transition-stub name="var-form-details__message" appear="false" persisted="false" css="true">
          <!--v-if-->
        </transition-stub>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`test select variant 1`] = `
"<div class="var-select" value="">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--standard">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <div class="var-field-decorator__line">
        <div class="var-field-decorator__dot"></div>
      </div>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;

exports[`test select variant 2`] = `
"<div class="var-select" value="">
  <div class="var-menu var--box var-select__menu" var-select-cover="">
    <div class="var-field-decorator var--box var-field-decorator--outlined">
      <div class="var-field-decorator__controller" style="cursor: pointer; overflow: hidden; --field-decorator-middle-offset-left: 0px; --field-decorator-middle-offset-width: 0px; --field-decorator-middle-offset-height: 0px;">
        <div class="var-field-decorator__icon"></div>
        <div class="var-field-decorator__middle">
          <div class="var-select__select" style="text-align: left;">
            <div class="var-select__label">
              <!--v-if-->
            </div>
            <!--v-if--><i class="var-icon var-icon--set var-icon-menu-down var-select__arrow" style="transition-duration: 300ms;" var-select-cover=""></i>
          </div>
        </div>
        <!--v-if-->
        <div class="var-field-decorator__icon">
          <!--v-if-->
        </div>
      </div>
      <fieldset class="var-field-decorator__line">
        <legend class="var-field-decorator__line-legend">
          <!--v-if-->
        </legend>
      </fieldset>
    </div>
    <!--teleport start-->
    <!--teleport end-->
  </div>
  <transition-stub name="var-form-details" appear="false" persisted="false" css="true">
    <!--v-if-->
  </transition-stub>
</div>"
`;
